bin_SCRIPTS =

scripts = \
pfls \
pfcm \
pfcp \
pfscripts.py

EXTRA_DIST = \
$(scripts)

bin_SCRIPTS += $(scripts)                                                                                                                                                                                                             
